# Kami

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  test.cpp
include/: meshTree.hpp  microstl.hpp  svgfigure.hpp
include/kami/: arguments.hpp  bin_packing.hpp  bounds.hpp  common.hpp  display_settings.hpp  linked_edge.hpp  linked_mesh.hpp  linked_plan.hpp  linked_polygon.hpp  linked_pool.hpp  math.hpp  meshTree.hpp  overlaps.hpp  svgfigure.hpp
include/kami/app/: app_info.hpp  logger.hpp  rendering.hpp
include/kami/app/plugin/: hub.hpp  iplugin_manager.hpp  plugin.hpp  plugin_manager.hpp  plugin_manager_impl.hpp
include/kami/app/ui/: BaseAppUI.hpp  HubUI.hpp  main_ui.hpp  rendering.hpp
include/kami/export/: color.hpp  line_settings.hpp  out_settings.hpp  paper_format.hpp  svg_objects.hpp
include/kami/global/: arguments.hpp  logging.hpp
include/kami/math/: barycenter.hpp  base_types.hpp  bounds.hpp  edge.hpp  hmat.hpp  overlaps.hpp  vertex.hpp
include/kami/mesh/: fixation.hpp  linked_edge.hpp  linked_implementations.hpp  linked_poly.hpp  linked_pool.hpp
include/kami/packing/: bin.hpp  box.hpp  corner.hpp
include/kami/plugins/colorbook/: colorbook.hpp  colorbook_ui.hpp
include/kami/utils/: img.hpp
src/: linked_mesh.cpp  linked_pool.cpp  linked_triangle.cpp  main.cpp  meshTree.cpp  overlaps.cpp  svgfigure.cpp
src/app/: logger.cpp
src/app/plugin/: plugin.cpp  plugin_manager.cpp
src/app/plugin/hub/: HubUI.cpp  hub.cpp
src/app/ui/: BaseAppUI.cpp  HubUI.cpp
src/export/: svg_objects.cpp
src/math/: edge.cpp  overlaps.cpp
src/mesh/: linked_poly.cpp  linked_pool.cpp  linked_triangle.cpp
src/plugins/colorbook/: colorbook.cpp  colorbook_ui.cpp
src/utils/: img.cpp
test/: Disco_Ball.stl  low_poly_cat.stl  low_poly_cat_scaled.stl  low_poly_yellow_cat.stl  pyramid8.stl  runall.sh  seeall.html  seefaces.html
tools/: img2cpp.py
